--- a/index.html
+++ b/index.html
@@ -6,17 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Email List</title>
 
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div id="app">
+        <header>
+            <h1 class="text-center py-5">Vue Email List</h1>
+        </header>
 
+        <main>
+            <div class=" container text-center">
+                <ul class="text-white">
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                    <li>
+                        <p>{{randomMail}}</p>
+                    </li>
+                </ul>
+            </div>
+        </main>
     </div>
 
     <!-- VUE 3 -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <!-- AXIOS 1.7.7 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
+        integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- JavaScript -->
     <script src="script.js"></script>
