added ten random emails

--- a/index.html
+++ b/index.html
@@ -24,35 +24,36 @@
             <div class=" container text-center">
                 <ul class="text-white">
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail1}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail2}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail3}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail4}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail5}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail6}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail7}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail8}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail9}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail}}</p>
+                        <p>{{randomMail10}}</p>
                     </li>
+
                 </ul>
             </div>
         </main>
