--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
         </header>
 
         <main>
-            <div class=" container text-center">
+            <div class=" container text-center" id="email-div">
                 <ul class="text-white">
                     <li>
-                        <p>{{randomMail1}}</p>
+                        <p>{{randomEmail1}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail2}}</p>
+                        <p>{{randomEmail2}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail3}}</p>
+                        <p>{{randomEmail3}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail4}}</p>
+                        <p>{{randomEmail4}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail5}}</p>
+                        <p>{{randomEmail5}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail6}}</p>
+                        <p>{{randomEmail6}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail7}}</p>
+                        <p>{{randomEmail7}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail8}}</p>
+                        <p>{{randomEmail8}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail9}}</p>
+                        <p>{{randomEmail9}}</p>
                     </li>
                     <li>
-                        <p>{{randomMail10}}</p>
+                        <p>{{randomEmail10}}</p>
                     </li>
 
                 </ul>
